# pySigma-backend-khulnasoft

./: .git-blame-ignore-revs  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: local_pysigma_khulnasoft_conversion.py
sigma/backends/khulnasoft/: khulnasoft.py
sigma/pipelines/khulnasoft/: khulnasoft.py
tests/: test_backend_khulnasoft.py  test_backend_khulnasoft_correlations.py  test_khulnasoft_pipelines.py
